--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,7 +5,7 @@
 #   workflow_dispatch, repository_dispatch, schedule, workflow_call
 #
 # Avaiable Events: https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
-name: Test Project
+name: Deployment Project
 on: push
 jobs:
   test:
@@ -22,6 +22,8 @@ jobs:
       - name: Run tests
         run: npm test
   deploy:
+    # needs: [test, otherjobs]
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
