--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,35 +6,43 @@
 #
 # Avaiable Events: https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
 name: Deployment Project
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches:
+      - third-action
+    paths-ignore:
+      - 'github/workflows/**'
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-      - name: Install NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Run tests
         run: npm test
-  deploy:
-    # needs: [test, otherjobs]
+  build:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-      - name: Install NodeJS
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Build project
         run: npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          # path: dist
+          path: |
+            dist
+            README.md
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy
         run: echo "Deploying ..."
