--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,7 +11,7 @@ on:
     branches:
       - third-action
     paths-ignore:
-      - 'github/workflows/**'
+      - '.github/workflows/**'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -37,9 +37,6 @@ jobs:
         with:
           name: dist-files
           path: dist
-          # path: |
-          #   dist
-          #   README.md
   deploy:
     needs: build
     runs-on: ubuntu-latest
