--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,6 +25,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.public.outputs.script-file }}
     steps:
       - name: Get Code
         uses: actions/checkout@v3
@@ -32,6 +34,9 @@ jobs:
         run: npm ci
       - name: Build project
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -47,5 +52,7 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls -al
+      - name: Output filename
+        run: echo ${{ needs.build.outputs.script-file }}
       - name: Deploy
-        run: echo "Deploying ..."
+        run: echo "Deploying..."
