--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,6 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output information
+        # Only the first line is available
         run: |
           echo "MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}"
           echo "MONGODB_HOST: ${{ env.MONGODB_HOST }}"
