--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - executionflow
+    paths-ignore:
+      - '.github/workflows/**'
 jobs:
   lint:
     runs-on: ubuntu-latest
