--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Install NodeJS
-        uses: actions/steup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
