--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -79,7 +79,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print deploy output
-        run: echo "${{ needs.deploy.outputs.result }}"
+        run: echo "${{ toJSON(needs.deploy.outputs) }}"
   report:
     needs: [lint, deploy]
     if: failure()
