--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -1,15 +1,28 @@
 name: 'Get & Cache Dependencies'
 description: 'Get the dependencies (via npm) and cache them'
+inputs:
+  caching:
+    description: 'Whether to cahce dependencies or not.'
+    required: false
+    default: 'true'
+outputs:
+  used-cache:
+    description: 'WHether the cache was used.'
+    value: ${{ steps.install.outputs.cache }}
 runs:
   using: 'composite'
   steps:
     - name: Cache dependencies
+      if: inputs.caching == 'true'
       id: cache
       uses: actions/cache@v3
       with:
         path: node_modules
         key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
+      id: install
+      if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
       shell: bash
-      run: npm ci
+      run: |
+        npm ci
+        echo "cache='${{ inputs.caching }}'" >> $GITHUB_OUTPUT
