--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,33 +19,6 @@ jobs:
       - name: Test code
         id: run-tests
         run: npm run test
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get code
-        uses: actions/checkout@v3
-      - name: Load & Cache dependencies
-        uses: ./.github/actions/cached-deps
-      - name: Build website
-        run: npm run build
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist-files
-          path: build
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: dist-files
-      - name: Deploy
-        run: |
-          ls -al
-          echo "deploying..."
   matchString:
     runs-on: ubuntu-latest
     steps:
@@ -56,7 +29,7 @@ jobs:
         uses: ./.github/actions/web-grep-js
         with:
           url: 'https://en.wikipedia.org/wiki/ISBN'
-          match-string: '/[0-9]{3}-[0-9]{1}-[0-9]{2}-[0-9]{6}-[0-9]{1}/g'
+          match-string: '[0-9]{3}-[0-9]{1}-[0-9]{2}-[0-9]{6}-[0-9]{1}'
       - name: Output Result
         run: |
           echo "IsMatch = ${{ steps.match.outputs.is-match }}"
