Fixed docker action file

--- a/.github/actions/web-grep-docker/action.yml
+++ b/.github/actions/web-grep-docker/action.yml
@@ -15,5 +15,5 @@ outputs:
   error:
     description: 'Return an error message, or no return value if there is no error.'
 runs:
-  using: 'node16'
-  main: 'index.js'
+  using: 'docker'
+  image: 'Dockerfile'
